fix spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -35,7 +35,7 @@
   --spacing-md: 2rem;
   --spacing-lg: 4rem;
   --spacing-xl: 8rem;
-  --spacing-top: 80px;
+  --spacing-top: 67px;
 
   /* UI Elements */
   --border-radius: 4px;
